The code structure has been improved in all classes.
* Bugs fixed;

* Added dependency Lombok;